src/test/deca/context/valid/125_classeCompareNull.deca
// Description:
//    Programme minimaliste: une classe et des Cast dans le Main.
//
// Résultats:
//	Classe non nulle
//
// Historique:
//    cree le 01/01/2022

class A { }
class B extends A { }
{
   B b = new B();
   if (b != null) {
        println("Classe non nulle");
   }
}
