src/test/deca/context/invalid/57_classCompare.deca
// Description:
//    Affectation et typage
//
// Resultats:
// 	Ligne 18: ContextualError: Assignment error
// 
// Historique:
//    cree le 01/01/2022

class A {
}
class B {
}
{
	A a = new A();
	B b = new B();
	// Doit etre refuse.
	b = a;
}
